--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -495,7 +495,7 @@ padding-right: 0;
     margin-top: 0;
 }
 .navbar-default .navbar-brand:hover{
-    color: #3f3f3f;
+    color: #69a03c;
 }
 .navbar-default .navbar-brand:link{
 
@@ -546,7 +546,7 @@ header .navbar-default .navbar-nav>li>a{
 header .navbar-default .navbar-nav>li>a:hover{
     background: #e7e7e7;
      border-bottom: 2px solid #69a03c;
-     color: #69a03c;
+     color: #69a03c!important;
      border-radius: 0;
 }
 header .in{
@@ -663,4 +663,8 @@ color: #69a03c;
     }
 li.dropdown{
     cursor: pointer;
+}
+.todays_date{
+    border-top: 2px solid #ec7106;
+    border-bottom: 2px solid #ec7106;	
 }
