--- a/src/main/webapp/css/edu.css
+++ b/src/main/webapp/css/edu.css
@@ -30,6 +30,9 @@ header .navbar {
     margin-bottom: 0;
     /* margin-top: 15px; */
 }
+.explanation.double-pair{
+    height: 180px!important;
+}
 
 .block {
     background: #fff;
@@ -105,6 +108,9 @@ section.blocks{
     border-right: 1px solid #aeaeae;
     width: 25%;
     font-weight: 400;
+}
+.double-pair .urok{
+    height: 180px;
 }
 .urok:last-child{
     border-right: none;
@@ -420,4 +426,8 @@ header .nav-tabs > li.active > a:hover{
 }
 .urok:hover{
     background: #efefef;
-}
+} 
+.explanation.double-pair .urok.centered a{
+position: absolute;
+top: 30%;
+} 
