--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -635,7 +635,7 @@ margin-right: 0;
 }
 
 .btn:hover{
-color: #69a03c;
+/*color: #69a03c;*/
 }
 .sectionafterheader{
   margin-top: 50px;
@@ -670,4 +670,66 @@ li.dropdown{
 .todays_date{
     border-top: 2px solid #ec7106;
     border-bottom: 2px solid #ec7106;	
+}/* Staraya versiya
+.albumthumb img{
+    width: 100%;
+    height: 100%;
+}
+.albumthumb{
+        padding: 0;
+
+}
+.albumphotorow{
+    border: 1px solid;
+    margin: 11px;
+    padding: 15px; 
+    position: relative;
+
+}
+.albumrowinfo{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 33.3%;
+    font-size: 1.3em;
+}*/
+.attachedalbum{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    /*border-top: 1px solid #efefef;*/
+    position: relative;
+    padding: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.attachedalbum:hover{
+    background-color: #efefef;
+}
+.attachedalbum img{
+    height: 80px;
+}
+.aboutAlbum{
+    /*color: #69a03c;*/
+    color: #000;
+    font-size: 25px;
+    position: absolute;
+    line-height: 1;
+    left: 85px;
+    top: 25px;
+    margin-left: 10px;
+}
+.aboutAlbum span{
+    font-size: 18px;
+    color: #888;
+}
+.grey{
+    color: grey;
+} 
+
+.block{
+    display: block;
+}
+hr{
+    margin: 8px;
 }
