--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -95,6 +95,7 @@ ul.navbar-right {
     margin-bottom: 5px;
     font-size: 16px;
     line-height: 21px;
+    padding-top: 5px;
 }
 .bold{
     font-weight: 800;
