Resources almost final visualization - some minor problems with downloading older resources. Problem with files being uploaded simultaneously - might reveal itself when downloading older hw.

--- a/src/main/webapp/css/edu.css
+++ b/src/main/webapp/css/edu.css
@@ -331,7 +331,11 @@ h1 {
 }
 #resources .uploaded-files-hw{
     box-shadow: none;
-    margin-bottom: 0;
+    margin-bottom: 0!important;
+    background-color: white;
+    padding: 5px;    background-color: white;
+    padding: 5px;
+    margin-top: 2px;
 }
 #resources .news{
     padding-top: 0;
