--- a/src/main/webapp/css/gallery.css
+++ b/src/main/webapp/css/gallery.css
@@ -2,9 +2,7 @@
   width: 100%;
   float: left;
   padding: 12px;
-  padding-top: 7px;
-  display: flex;
-  justify-content: center;
+  padding-bottom: 0;
 }
 .my-gallery img {
   width: 100%;
@@ -20,17 +18,10 @@
 }
 .pswp__bg{
   background-color: black;
-}  
-.threephotosrow figure.firstphoto{
-width: 66.66666666666666%;
-height: 100%;
 }
 .threephotosrow figure{
-width: 47%;
-}
-.threephotosrow  img
-{
-padding: 1px;
+  width: 33.333333%;
+  padding: 1px;
 }
 
 .twophotosrow figure{
@@ -53,14 +44,14 @@ padding: 1px;
 }
 */.onephotorow{
 
-}
+  }
 .blurphotorow figure{
   width: 50%;
   padding: 3px
 }
- 
+
 #bgimage{
-  background: url(../imgs/ava.jpg);    
+  background: url(../imgs/ava.jpg);
   height: 342px;
   width: 342px;
   background-attachment: center;
