--- a/src/main/webapp/css/posts-template.css
+++ b/src/main/webapp/css/posts-template.css
@@ -1,7 +1,7 @@
 .news {
     background: #fff;
     padding: 15px;
-    padding-bottom: 0px;
+    /*padding-bottom: 0px;*/
     margin-bottom: 2px;
     /*box-shadow: 1px 3px 4px #8fb87c;*/
     font-weight: 400;
