--- a/src/main/webapp/css/edu.css
+++ b/src/main/webapp/css/edu.css
@@ -348,6 +348,7 @@ h1 {
     line-height: 18px;
     margin-top: 5px;
     margin-left: 10px;
+    font-weight: 500 !important;
 }
 @media(max-width:350px){
     .about-hw-file {
@@ -404,8 +405,8 @@ header .nav-tabs > li.active > a:hover{
     border-color: #69a03c;
 }
 .btn-primary.active, .btn-primary:active, .open>.dropdown-toggle.btn-primary {
-    color: #fff;
-    background-color: #69a03c;
+    color: black;
+    background-color: white;
     border-color: #69a03c;
 }
 .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover, .open>.dropdown-toggle.btn-primary.focus, .open>.dropdown-toggle.btn-primary:focus, .open>.dropdown-toggle.btn-primary:hover {
@@ -549,4 +550,21 @@ section.blocks{
     background-color: white;
     margin-top: 3px;
     padding-left: 5px;
+}
+.redditstyle a:focus{
+    outline: none;
+}
+
+.addingsection select{
+    width: 100%;
+    padding: 15px 10px 10px 10px;
+    background-position: 100% 50%;
+    background-repeat: no-repeat;
+    background-size: auto 15%;
+    border-radius: 0;
+    cursor: pointer;
+    -webkit-appearance: none;
+    border: 1px solid #efefef;
+    font-size: 20px;
+    outline: none;
 }
