--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -24,7 +24,7 @@ body {
     letter-spacing: .01em;
     font-size: 18px;
     background: #dfead6;
-/*    background: linear-gradient(45deg,rgba(74,196,190,.7),rgba(235,51,255,0.5));*/
+    /*    background: linear-gradient(45deg,rgba(74,196,190,.7),rgba(235,51,255,0.5));*/
     background-attachment: fixed;
 }
 
@@ -234,7 +234,7 @@ footer {
     font-size: 55px;
     font-weight: 600;
     color: white !important;
-    ;
+;
     line-height: 1.733;
     padding-top: 60px;
     text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.4);
@@ -354,8 +354,8 @@ footer {
     color:#868686;
 }
 .block{
-  /*  padding-left: 7px;
-    padding-right: 7px;*/
+    /*  padding-left: 7px;
+      padding-right: 7px;*/
     padding: 0;
     margin-bottom: 7px;
 }
@@ -390,32 +390,32 @@ footer {
 
 }
 .marg{
-	margin-top: 60px;
+    margin-top: 60px;
 }
 @media (max-width: 347px) {
-	body{
-		font-size: 17px;
-		line-height: 26px;
-	}
+    body{
+        font-size: 17px;
+        line-height: 26px;
+    }
 }
 
 @media (max-width: 339px) {
-	body{
-		font-size: 16px;
-		line-height: 25px;
-	}
+    body{
+        font-size: 16px;
+        line-height: 25px;
+    }
 }
 @media (max-width: 332px) {
-	body{
-		font-size: 14px;
-		line-height: 24px;
-	}
+    body{
+        font-size: 14px;
+        line-height: 24px;
+    }
 }
 @media (max-width: 310px) {
-	body{
-		font-size: 12px;
-		line-height: 21px;
-	}
+    body{
+        font-size: 12px;
+        line-height: 21px;
+    }
 }
 .navbar-default .navbar-toggle .icon-bar{
     background: #69a03c;
@@ -431,9 +431,9 @@ footer {
 }
 @media (min-width: 770px) {
     .navbar{
-    min-height: 40px;
-    height: 46px;
-}
+        min-height: 40px;
+        height: 46px;
+    }
 }
 
 .navbar-default .navbar-brand{
@@ -456,9 +456,9 @@ footer {
 }
 @media(max-width:414px){
     .feed{
-/*        height: 140px;*/
+        /*        height: 140px;*/
 
-display: flex!important;
+        display: flex!important;
     }
 }
 .eventcontent{
@@ -492,7 +492,7 @@ ul.nav li {
     padding-top: 12px;
 }
 ul.navbar-nav{
-padding-right: 0;
+    padding-right: 0;
     margin-top: 0;
 }
 .navbar-default .navbar-brand:hover{
@@ -502,19 +502,19 @@ padding-right: 0;
 
 }
 .navbar-brand{
-height: 45px;
+    height: 45px;
 }
 .l2 a {
     color: #5c8e34;
 }
 .navbar-toggle{
-margin-bottom:0;
-padding-right:10px;
+    margin-bottom:0;
+    padding-right:10px;
 }
 @media (max-width: 770px ) {
-	.modal-dialog{
-    margin: 10px -2px; //-2px и будет во всю ширину
-}
+    .modal-dialog{
+        margin: 10px -2px; //-2px и будет во всю ширину
+    }
 }
 .navbar-default .navbar-toggle:hover{
     background: none;
@@ -546,9 +546,9 @@ header .navbar-default .navbar-nav>li>a{
 }
 header .navbar-default .navbar-nav>li>a:hover{
     background: #e7e7e7;
-     border-bottom: 2px solid #69a03c;
-     color: #69a03c!important;
-     border-radius: 0;
+    border-bottom: 2px solid #69a03c;
+    color: #69a03c!important;
+    border-radius: 0;
 }
 header .in{
     background: #fff;
@@ -560,24 +560,24 @@ header .collapsing{
 }
 @media(min-width:768px){
     nav, .navbar-brand {
-    font-size: .95em;
-}
+        font-size: .95em;
+    }
 }
 @media(max-width:768px){
     header .navbar-default .navbar-nav>.active>a{
-    border-bottom: none;
-}
-header .navbar-default .navbar-nav>li>a{
-    border-bottom: none;
+        border-bottom: none;
+    }
+    header .navbar-default .navbar-nav>li>a{
+        border-bottom: none;
 
-}
-header .navbar-default .navbar-nav>li>a:hover{
-     border-bottom: none;
-    background: none;
-}
+    }
+    header .navbar-default .navbar-nav>li>a:hover{
+        border-bottom: none;
+        background: none;
+    }
 }
 ul.navbar-right{
-margin-right: 0;
+    margin-right: 0;
 }
 .myacc{
     float:  right;
@@ -624,53 +624,53 @@ margin-right: 0;
     font-size: 17px;
 }
 .navbar-collapse{
-	margin-top: 0;
-	padding-right: 0;
+    margin-top: 0;
+    padding-right: 0;
 }
 
 .navbar-collapse.in{
- border-bottom: 1px solid #efefef !important;
+    border-bottom: 1px solid #efefef !important;
 }
 .navbar-nav{
     margin-bottom: 0;
 }
 
 .btn:hover{
-/*color: #69a03c;*/
+    /*color: #69a03c;*/
 }
 .sectionafterheader{
-  margin-top: 50px;
+    margin-top: 50px;
 }
 .event-item{
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .modal-header{
-  border: none;
+    border: none;
 }
 .modal-header button{
-  font-size: 2em;
+    font-size: 2em;
 }
 .modal-body img{
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 .album-image img{
-  border-radius: 50%;
-  height: 100px;
-  width: 100px;
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
 }
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
     color: #69a03c;
-    }
+}
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-     color: #69a03c; 
-    }
+    color: #69a03c;
+}
 li.dropdown{
     cursor: pointer;
 }
 .todays_date{
     border-top: 2px solid #ec7106;
-    border-bottom: 2px solid #ec7106;	
+    border-bottom: 2px solid #ec7106;
 }/* Staraya versiya
 .albumthumb img{
     width: 100%;
@@ -726,7 +726,7 @@ li.dropdown{
 }
 .grey{
     color: grey;
-} 
+}
 
 .block{
     display: block;
@@ -736,4 +736,38 @@ hr{
 }
 button{
     outline: none!important;
+}
+figure{
+    background: #80808033;
+}
+.lds-hourglass {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+}
+.lds-hourglass:after {
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 6px;
+    box-sizing: border-box;
+    border: 26px solid #69a03c;
+    border-color: #69a03c transparent #69a03c transparent;
+    animation: lds-hourglass 1.2s infinite;
+}
+@keyframes lds-hourglass {
+    0% {
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+        transform: rotate(1800deg);
+    }
 }
