--- a/src/main/webapp/css/edu.css
+++ b/src/main/webapp/css/edu.css
@@ -581,3 +581,16 @@ section.blocks{
     padding: 10px 5px 5px 5px;
 
 }
+.tabsection .nav-tabs{
+    position: relative;
+}
+ul.nav-tabs li:last-child{
+    float: right;
+    position: relative;
+}
+ul.nav-tabs li:last-child a{
+    position: absolute;
+    top: -3px;
+    height: 49px;
+    right: 0;
+}
