--- a/src/main/webapp/css/edu.css
+++ b/src/main/webapp/css/edu.css
@@ -584,11 +584,11 @@ section.blocks{
 .tabsection .nav-tabs{
     position: relative;
 }
-ul.nav-tabs li:last-child{
+ul.nav-tabs  .plusSign{
     float: right;
     position: relative;
 }
-ul.nav-tabs li:last-child a{
+ul.nav-tabs .plusSign a{
     position: absolute;
     top: -3px;
     height: 49px;
